jenkins/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-python-pod
  namespace: devops-tools
spec:
  containers:
  - name: ubuntu-python-container
    image: ubuntu:latest
    command: ["/bin/bash", "-c"]
    args:
      - while true; do echo hello; sleep 10;done
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "apt-get update && apt-get install -y python3 python3-pip"]
